# sonic

./: .gitignore  .gitmodules  README.md  README__WIP.md  advanced-interfaces-draft-ja.md  core-interfaces-ja.md
__development/vst_dev_host/: .gitignore  CMakeLists.txt  CMakePresets.json  app_window_base.h  app_window_mac.h  app_window_mac.mm  audio_io_base.h  audio_io_mac.cpp  audio_io_mac.h  main.cpp  midi_input.cpp  midi_input.h  midi_input_base.h  midi_input_mac.cpp  midi_input_mac.h  midi_input_manager.cpp  midi_input_manager.h  midi_input_manager_base.h  midi_input_manager_mac.cpp  midi_input_manager_mac.h  views.h  views.mm
__development/vst_dev_host/vst_dev_host/: app_window_mac.h  app_window_mac.mm  audio_io_mac.h  main.cpp  midi_input_base.h  midi_input_mac.cpp  midi_input_mac.h
__templates-dev/clap-simple/: CMakeLists.txt
__templates-dev/clap-simple/my_clap_1/: my_synthesizer.h  plugin_entry.cpp
__templates-dev/clap-simple/my_clap_1/portable/: parameter_manager.h
__templates-dev/clap-simple/my_clap_1/wrapper/: clap_rootage.h
__templates-dev/clap-simple/sonic_common/: advanced_synthesizer.h  synthesizer_base.h
__templates-dev/clap-simple/sonic_common/general/: logger.h
__templates-dev/clap-simple/sonic_common/logic/: parameter_builder_impl.h
experiments/clap-cppm/: .clangd  CMakeLists.txt  CMakePresets.json
experiments/clap-cppm/framework/: CMakeLists.txt
experiments/clap-cppm/framework/api/: advanced-synthesizer.h
experiments/clap-cppm/framework/common/: listener-port.ixx  spsc-queue.ixx
experiments/clap-cppm/framework/core/: interfaces.h  parameter-registry.ixx  parameter-spec-item.ixx  parameter-store.ixx
experiments/clap-cppm/plugin/: project1-synthesizer.cpp  project1-synthesizer.h
experiments/clap-multi-ui-support/variants/clap/: CMakeLists.txt  plugin-entry.cpp
experiments/clap-native-ui-dev/: CMakeLists.txt  cspell.json  run.sh
experiments/clap-native-ui-dev/framework/: CMakeLists.txt
experiments/clap-native-ui-dev/framework/core/: parameter-builder-impl.h  parameter-store.h
experiments/clap-native-ui-dev/lib/sonic/: CMakeLists.txt
experiments/clap-native-ui-dev/native-ui/briq/: briq-editor-view.h
experiments/clap-native-ui-dev/native-ui/microui/: CMakeLists.txt  microui-editor-view.cpp  microui-editor-view.h
experiments/clap-native-ui-dev/plugin/: CMakeLists.txt  project1-factory.cpp  project1-synthesizer.cpp
hosts/clap-dev-host/clap_dev_host/: CMakeLists.txt  main.cpp
hosts/clap-dev-host/clap_dev_host/modules/: app_window_base.h  app_window_mac.h  audio_io_mac.cpp  audio_io_mac.h  logger.cpp  logger.h  midi_input_base.h  spsc_queue.h
hosts/vst-dev-host/: CMakeLists.txt  CMakePresets.json  Makefile_example  run.sh
hosts/vst-dev-host/vst_dev_host/: CMakeLists.txt  main.cpp
hosts/vst-dev-host/vst_dev_host/modules/: app_window_mac.mm  audio_io_mac.cpp  logger.cpp  logger.h
hosts/vst-dev-host/vst_dev_host/vst/: plugin_bridge.cpp
misc/templates-dev/vst-simple/: CMakeLists.txt  Makefile_template
misc/templates-dev/vst-simple/sonic/: CMakeLists.txt  synthesizer_base.h
misc/templates-dev/vst-simple/source/: project1_synthesizer.cpp  project1_synthesizer.h
sonic-framework/wrappers/vst3wf/: .clangd  .gitignore  CMakeLists.txt  Makefile  commands.txt  cspell.json
sonic-framework/wrappers/vst3wf/source/: MySynthesizer.h  helloworldcontroller.cpp  helloworldcontroller.h  helloworldprocessor.cpp  helloworldprocessor.h  logger.h  parameter_builder_impl.h  plugin_factory.cpp  project1_cids.h  project1_controller.cpp  project1_controller.h  project1_entry.cpp  project1_processor.cpp  project1_processor.h  tuid_helper.h  version.h  (+2 more)
templates/VstDevHost/: .gitignore  CMakeLists.txt  Makefile_example
templates/VstDevHost/vst_dev_host/: CMakeLists.txt  app0_mac_devices.cpp  main.cpp
templates/_clap-dev-host/: CMakeLists.txt  CMakePresets.json  Makefile  run.sh
templates/_clap-dev-host/clap_dev_host/: CMakeLists.txt  main.cpp
templates/_vst-dev-host/: CMakeLists.txt  CMakePresets.json  Makefile_example
templates/auv3-cmake/: .clangd  .gitignore  CMakeLists.txt  Makefile
templates/auv3-cmake/plugin/: project1-synthesizer.cpp  project1-synthesizer.h
templates/clap-cppm/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile_dev_example  dev.sh  run.sh
templates/clap-cppm/cmake/: CppModulesSupport.cmake
templates/clap-cppm/framework/: CMakeLists.txt
templates/clap-cppm/plugin/: CMakeLists.txt  project1-synthesizer.cpp
templates/clap-simple/: CMakeLists.txt  dev.sh
templates/clap-simple/my_clap_1/: CMakeLists.txt  clap_rootage.cpp  clap_wrapper.cpp  clap_wrapper.h  main.cpp  my_synthesizer.h  plugin_entry.cpp  synthesizer_base.h
templates/clap-simple/sonic_common/: CMakeLists.txt  advanced_synthesizer.h  synthesizer_base.h
templates/cpp-multi-target/: .clangd  .gitignore  .gitignore_template  CMakeLists.txt  CMakeLists_template.cmake  CMakePresets.json  Makefile  Makefile_dev_example  Makefile_template  frontend  run.sh  www
templates/cpp-multi-target/__worker/: index.ts
templates/cpp-multi-target/cmake/: build-frontend.cmake  setup-sdks-dev.cmake  setup-sdks.cmake  setup-sonic-sdks.cmake  setup-sonic.cmake
templates/cpp-multi-target/plugin/: CMakeLists.txt  project1-factory.cpp  project1-synthesizer.cpp  project1-synthesizer.h
templates/cpp-multi-target/source/: CMakeLists.txt  project1-factory.cpp  project1-synthesizer.cpp  project1-synthesizer.h
templates/vst-simple/: .gitignore  CMakeLists.txt  Makefile_exported  Makefile_template  README.md
templates/vst-simple/__worker/: fetch_latest_sdk.txt  file-entries.json  index.ts
templates/vst-simple/frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
templates/vst-simple/sonic/: CMakeLists.txt  synthesizer_base.h
templates/vst-simple/source/: MySynthesizer.cpp  MySynthesizer.h  plugin_factory.cpp  project1_synthesizer.cpp  project1_synthesizer.h
tools/VstDevHost/vst_dev_host/: CMakeLists.txt  app0_mac_devices.cpp  app1_plugin_interfacing.cpp  app_window_base.h  audio_io_mac.cpp  main.cpp
(+833 files in other folders)
